<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.anata.lightweightconcrete.MainActivity">

    <GridLayout
        android:id="@+id/gridLay"
        android:layout_width="wrap_content"
        android:layout_height="184dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097">

        <TextView
            android:id="@+id/maxName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="@string/max_1"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/max1"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:visibility="visible" />

        <EditText
            android:id="@+id/max2"
            android:layout_width="@android:dimen/notification_large_icon_height"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:visibility="visible" />

        <TextView
            android:id="@+id/denName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="@string/den"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/dye1"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:id="@+id/dye2"
            android:layout_width="@android:dimen/notification_large_icon_height"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/denName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="@string/den2"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/hr1"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:id="@+id/hr2"
            android:layout_width="@android:dimen/notification_large_icon_height"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/den2Name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="@string/den3"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/hrs1"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:id="@+id/hrs2"
            android:layout_width="@android:dimen/notification_large_icon_height"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

    </GridLayout>

    <GridLayout
        android:id="@+id/gridLay2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:columnCount="2"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/dry"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="@string/class_tis"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="@string/com"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="@string/water"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="4"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="@string/com_tis"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="5"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="@string/water_tis"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dyeR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:visibility="visible"
            tools:text="-" />

        <TextView
            android:id="@+id/cR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:visibility="visible"
            tools:text="-" />

        <TextView
            android:id="@+id/comR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:visibility="visible"
            tools:text="-" />

        <TextView
            android:id="@+id/waterR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:visibility="visible"
            tools:text="-" />

        <TextView
            android:id="@+id/tis1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="4"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:visibility="visible"
            tools:text="-" />

        <TextView
            android:id="@+id/tis2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="5"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:visibility="visible"
            tools:text="-" />

    </GridLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:elevation="0dp"
        android:onClick="calCu"
        android:text="@string/cal"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLay2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLay" />

</android.support.constraint.ConstraintLayout>
